# ShopSherpa

./: .env.example  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  pyproject.toml  rules.txt
alembic/: env.py
alembic/versions/: f78f7b7a9a18_initial_migration_with_core_models.py
app/: __init__.py  celery_app.py  main.py
app/api/: health.py
app/core/: config.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  offer.py  product.py  query.py  ranking.py  review.py  user.py
app/tasks/: __init__.py  example.py
shopsherpa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_celery.py  test_db.py  test_health.py
